--- a/src/client/components/PopoverMenu/PopoverMenu.less
+++ b/src/client/components/PopoverMenu/PopoverMenu.less
@@ -40,6 +40,10 @@ div[data-dir='rtl'] .PopoverMenu {
   border-top: 1px solid #e9e7e7;
   height: 50px !important;
 
+  .st-header__image {
+    width: 30px;
+  }
+
   @media @small {
     display: none;
   }
